--- a/web/game.html
+++ b/web/game.html
@@ -5,6 +5,8 @@
 		<title>e-blobution</title>
 		
 		<link type="text/css" rel="stylesheet" href="css/styles.css" />
+
+
 	</head>
 	<body>
 		
@@ -15,7 +17,14 @@
 		<div class="calque-unit" ></div>
 		<div class="calque-unit" ></div>
 		<div class="calque-unit" ></div>
-		
+
+		<script type="text/javascript" src="js/jQuery/jquery-2.1.4.js"></script>
+
+		<script type="text/javascript" src="js/Class.js/namespace.js"></script>
+		<script type="text/javascript" src="js/Class.js/Utils.js"></script>
+		<script type="text/javascript" src="js/Class.js/Class.js"></script>
+		<script type="text/javascript" src="js/Class.js/Exception.js"></script>
+
 	</body>
 </html>
 	
