--- a/web/game.html
+++ b/web/game.html
@@ -10,7 +10,13 @@
 	</head>
 	<body>
 		
-		<div class="calque-unit" ></div>
+		<div class="blob">
+			<div class="calque-unit" ></div>
+			<div class="calque-eyes" ></div>
+		</div>
+		
+		
+		
 		<div class="calque-unit" ></div>
 		<div class="calque-unit" ></div>
 		<div class="calque-unit" ></div>
